# coding-challenge

./: pyproject.toml  requirements.txt  setup.py
config/: config.yaml
resources/input/: test.csv
scripts/: setup.sh
src/1_data_processing/: TASK.md  task.py
src/2_large_parallel_processing/: TASK.md
